scss/_fuckupnight.scss
h1,h2,h3,h4,h5,h6{
  margin-top: 0rem;
}
.red{
  color: $fuckupred;
}

.content{
  background-color: $white;
  box-shadow: 3px 3px 9px -7px black, -3px 3px 9px -7px black;

  .content-area{
    @media #{$medium-up} {
      padding: 1em 1em 2.5em 1em;
    }
  }
}


header {
  @media #{$medium-up} {
    margin-top:2rem;
  }
}

#logo{
  margin-top: 1rem;
  span {
    position: absolute;
    bottom: 12%;
    left: 15%;
    color: black;
    width: 47.5%
  }
  a{
    @media #{$medium-up} {
      margin-left: 1rem;
    }
    img{ max-width: 340px; }
  }
}

.top-bar{
  margin-top: 0.5rem;

  @media #{$medium-up} {
      border-top: 5px solid $bg-grau;
      border-bottom: 5px solid $bg-grau;
      box-sizing: content-box;
      margin-left: 1rem;
      margin-right: 1rem;
  }
}


  img[src*=svg] { width/*\**/: 100%;}

  .failure-big {
    color: white;
    width: 85%;
    background: $fuckupred;
    border: $fuckupred 5px solid;
    margin-top: 4em;
    margin-right: -1em;
    float: right;
  }

  .failure-small {
    right: 0;
    color: white;
    //width: 100% + 2em;
    position: absolute;
    background: $fuckupred;
    border: $fuckupred 5px solid;
    margin-top: 1em;
    margin-left: -1em;
  }

  h6{
    font-weight: bold;
    margin-bottom: $padding;
  }

  span.copy{
    display: inline-block;
    font-size: 0.8em;
    margin-bottom: 0.5rem;
  }

  // Footer
#footer{
  margin-top: $padding;

  .tile{
    @media #{$small-only} {
      margin-bottom: 1rem;
      text-align: center;
      img{
        max-width: 80%;
      }
    }
  }
}

a.next, a.prev, a.fullscreen {
  color: white;
}
a.next {
  right: 1em !important;
}
a.prev {
  left: 1em !important;
}
a.fullscreen {
  right: 1em !important;
}
.slides-navigation-top {
  margin: 0 auto;
  position: absolute;
  z-index: 3;
  top: 5%;
  width: 100%;
}

.slides-pagination a {
  border: 2px solid white !important;
}
.slides-pagination a.current {
  background: white !important;
}

.box:before{
  content: "";
  display: block;
  padding-top: 100%; 	/* initial ratio of 1:1*/
}

.box {
  width: 100%;
}

.box-content {
  position:  absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  display: table;
  width: 100%;
  height: 100%;
}

.fill {
  width: 100%;
  height: 100%;
}

.showcase{
  background-color: $bg-grau;
  margin: 0 !important;
  @media #{$medium-up} {
    margin-top: -1.313em !important;
    -moz-box-sizing:    border-box;
    -webkit-box-sizing: border-box;
    box-sizing:        border-box;
    border: 5px solid $bg-grau;
  }

  .box{
    height: 100%;
    .text{
      display: table-cell;
      width: 100%;
      height: 100%;
      text-align: center;
      vertical-align: middle;
      line-height: 150%;
      i{
        font-size: 9rem;
        line-height: 100%;
      }
      span{
        font-size: 1.7rem;
        &.ort{
          font-weight: bold;
        }
      }
    }
  }
}
.showcase-left, .showcase-right{
  color: #ffffff;
  .backstretch{
    opacity: 0.6;
    transition: opacity 0.5s ease;
  }
  &:hover{
    .backstretch{
      opacity: 0.4;
      transition: opacity 0.5s ease;
    }
  }
}
.showcase-container {
  cursor: pointer;
}

  .showcase-left{
    @media #{$medium-up} {
    padding-right: 7px !important;
    }
    .box {
      background-color: #000000 !important;
    }
  }
  .showcase-right{
    @media #{$medium-up} {
    padding-left: 7px !important;
    }
    .box {
      background-color: $fuckupred !important;
    }
  }

  .two-text-columns {
    -webkit-column-count: 2;
    -moz-column-count: 2;
    column-count: 2;
    -webkit-column-gap: 2rem;
    -moz-column-gap: 2rem;
    column-gap: 2rem;
  }

#gallery {
  white-space: nowrap;
  overflow: hidden;
}

#gallery > li {
  display: inline-block;
  float: none;
}

